@@ -34,12 +34,17 @@
 <openremote xmlns="http://www.openremote.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://www.openremote.org protocol.xsd">
 	<protocol displayName="Marantz A/V receivers" tagName="marantz_avr">
-		<attr name="command" label="Command" options="POWER,MUTE,VOLUME,INPUT,SURROUND_MODE,TUNER_FREQUENCY,TUNER_PRESET,OSD_LINE_TEXT,OSD_LINE_SELECTED,NETWORK_CONTROL,UP,DOWN,LEFT,RIGHT,ENTER,RETURN">
+		<attr name="command" label="Command" options="MAIN_POWER,POWER,MUTE,VOLUME,INPUT,SURROUND_MODE,TUNER_FREQUENCY,TUNER_PRESET,OSD_LINE_TEXT,OSD_LINE_SELECTED,MAIN_CONTROL,NETWORK_CONTROL">
 			<validations>
 				<allowBlank>false</allowBlank>
 			</validations>
 		</attr>
 		<attr name="parameter" label="Parameter" tooltipMessage="Optional parameter, command specific">
+			<validations>
+				<allowBlank>true</allowBlank>
+			</validations>
+		</attr>
+                <attr name="zone" label="Zone" options="MAIN,ZONE2,ZONE3">
 			<validations>
 				<allowBlank>true</allowBlank>
 			</validations>
